--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "react-native-product-ratings",
   "version": "1.0.2",
   "description": "A customizable product rating component for React Native",
@@ -80,7 +81,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gitfullstacker/react-native-product-ratings.git"
+    "url": "https://github.com/gitfullstacker/react-native-product-ratings.git"
   },
   "bugs": {
     "url": "https://github.com/gitfullstacker/react-native-product-ratings/issues"
