--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "typecheck": "tsc --noEmit",
     "prebuild": "npm run lint && npm run typecheck",
-    "build": "tsc",
+    "build": "tsc && npm run copy-assets",
+    "copy-assets": "cp -r src/images lib/images",
     "watch": "tsc -w",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
@@ -76,6 +77,7 @@
   },
   "files": [
     "lib/**/*",
+    "src/images/",
     "README.md",
     "LICENSE"
   ],
