--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build": "tsc && npm run copy-assets",
     "copy-assets": "cp -r src/images lib/images",
     "watch": "tsc -w",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run build",
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "cd example && npm run start",
-    "bootstrap": "npm run build && cd example && npm install",
+    "bootstrap": "npm run clean && npm run build && cd example && npm install",
     "clean": "rm -rf lib"
   },
   "husky": {
